@@ -24,9 +24,10 @@
 
 #define HAVE_ATOMIC_MACROS
 
+#define STACK_DIRECTION_DOWN 1
+
 // returns 1 when counter reaches zero, 0 if not
-static inline int atomic_dec(volatile int *a)
-{
+static inline int atomic_dec(volatile int *a) {
    unsigned char rc;
 
    __asm(
@@ -37,12 +38,19 @@ static inline int atomic_dec(volatile int *a)
    return rc != 0;
 }
 
-static inline void atomic_inc(volatile int *a)
-{
+static inline void atomic_inc(volatile int *a) {
    __asm(
         "lock; incl %0"
         : "=m" (*a)
    );
+}
+
+#define HAVE_CHECK_STACK_POS
+
+static inline size_t get_stack_pos() {
+   size_t addr;
+   __asm("movq %%rsp, %0" : "=g" (addr) );
+   return addr;
 }
 
 #endif
